2004-11-28  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/event.c: Rename rt_event_post() -> rt_event_signal(),
	rt_event_pend() -> rt_event_wait() for consistency purpose with
	the condvar support.

2004-11-28  Jan Kiszka <kiszka@rts.uni-hannover.de>

	* skins/rtai/sem.c: Export sem_broadcast().

2004-11-27  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-*/syscall.h: Provide support for direct
	reading of the TSC in user-space when available.

	* nucleus/timer.c: Read Adeos profile timings when available when
	CONFIG_RTAI_OPT_TIMESTAMPS is enabled.

2004-11-26  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/snippets: Add code snippets illustrating the use of
	the API.

	* nucleus/pod.c: Compile out the scheduler hook unless we are
	actually building the simulator.
	(xnpod_switch_fpu): Inline calls on the fast path.

	* skins/rtai/lib/task.c (rt_task_set_mode, rt_task_notify): Export
	to user-space.

	* testsuite/latency/latency.c (main): Allow for setting the
	sampling period.

2004-11-25  Philippe Gerum  <rpm@xenomai.org>

	* fusion: Pass RTAI_KMOD_CFLAGS as needed.

2004-11-24  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/module.c (__xeno_skin_init): Fix init without
	user-space support.

	* arch/i386/hal/hal.c (rthal_trap_fault): Remove lazy handling of
	on-demand kernel memory mapping, leaving the burden to Adeos
	(which does it eagerly instead, see include/asm-i386/pgalloc.h).

2004-11-24  Marc Kleine-Budde <kleine-budde@gmx.de>

	* configure.in: Fix various m4 quoting issues.

2004-11-23  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/defconfig: Rebuild sound versions.

2004-11-22  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Use pretty printing for help strings
	(AS_HELP_STRING).

	* nucleus: Fix various undefined symbols with fusion-less builds.

	* nucleus/timer.c (xntimer_start): Do not check for preposterous
	dates: the start value is a duration and not an absolute date, and